--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+body {
+  background: url(./assets/backgrounds/background.jpg) no-repeat center fixed;
+  background-size: cover;
+  font-family: 'Poppins', sans-serif; }
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  text-align: left;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items: center; }
 
-.App-link {
-  color: #61dafb;
-}
+h1 {
+  font-size: 1.4rem;
+  text-transform: uppercase; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+h2 {
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: green; }
+
+ul {
+  background-color: white;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  max-width: 25rem;
+  border: 1px solid salmon;
+  border-radius: 5px;
+  margin: 1rem; }
+
+.menu-item {
+  border-left: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 0.8rem; }
+
+.main-container {
+  background-color: white;
+  border: 1px solid green;
+  text-align: center;
+  border-radius: 5px;
+  width: 400px;
+  margin: 1rem;
+  box-shadow: 4px 4px 10px orange; }
+
+#background {
+  position: static;
+  width: 100%;
+  height: 15rem;
+  background: url(./assets/backgrounds/background.jpg);
+  background-size: cover; }
+
+.bottom-edge {
+  display: flex;
+  flex-direction: row; }
+
+#triangle-bottomleft {
+  width: 0;
+  height: 0;
+  border-bottom: 30px solid white;
+  border-right: 200px solid transparent;
+  position: relative;
+  bottom: -5rem; }
+
+#triangle-bottomright {
+  width: 0;
+  height: 0;
+  border-bottom: 30px solid white;
+  border-left: 200px solid transparent;
+  position: relative;
+  bottom: -5rem; }
+
+#profile-photo {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 4rem;
+  border: 3px solid white;
+  box-shadow: -10px 10px 2px rgba(255, 145, 0, 0.3);
+  position: relative;
+  top: 9.5rem;
+  z-index: 1; }
+
+#name {
+  font-size: 1.7rem;
+  color: #333;
+  margin-top: 4rem; }
+
+#title {
+  margin-top: 1rem;
+  font-weight: bold;
+  font-size: 0.9rem;
+  color: orangered; }
+
+.social-media {
+  color: #333;
+  width: 10rem;
+  display: flex;
+  justify-content: space-evenly;
+  border: none;
+  margin: auto;
+  padding: 1.3rem; }
+
+.buttons {
+  margin-bottom: 0.3rem; }
+  .buttons button {
+    font-family: Poppins 400, sans-serif;
+    font-weight: bold;
+    color: #666;
+    width: 50%;
+    height: 2.5rem;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    border: none;
+    border-top: 1px solid #CCC;
+    background-color: inherit;
+    letter-spacing: 0.05rem;
+    border-image: linear-gradient(120deg, #CCC, transparent) 1; }
+  .buttons button:first-of-type {
+    border-right: 1px solid #CCC;
+    border-image: linear-gradient(-60deg, #ccc, transparent) 1; }
+
+.list-of-works {
+  display: grid; }
+
+/*# sourceMappingURL=App.css.map */
