--- a/src/containers/Resume/Resume.module.scss
+++ b/src/containers/Resume/Resume.module.scss
@@ -1,4 +1,4 @@
-.aboutContainer {
+.gridContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: auto;
@@ -30,23 +30,15 @@
 
 .element3 {
     padding: 0.5rem;
-
-    li {
-        border-bottom: 1px solid #ccc;
-        border-image: linear-gradient(90deg, transparent, #ccc, transparent) 1;
-        padding: 1rem 0;
-    }
-
-    li:last-of-type {
-        border-bottom: none;
-    }
 }
 
 .badge {
-    background-color: orange;
-    color: white;
+    background-color: white;
+    color: #AAA;
+    border: 1px solid #AAA;
     border-radius: 2px;
     font-size: 0.8rem;
-    margin: 0.3rem;
-
+    margin: 0.5rem;
+    padding: 0.15rem;
+    text-align: center;
 }
