--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "_variables.scss";
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -42,6 +44,9 @@ table {
 	border-spacing: 0;
 }
 
+
+
+
 body {
     background: url(./assets/backgrounds/background.jpg) no-repeat center fixed;
     background-size: cover;
@@ -61,7 +66,7 @@ body {
 
 h1 {
     font-size: 1.4rem;
-    color: #333;
+    color: $gray4;
     position: relative;
     left: -1rem;
 }
@@ -69,39 +74,41 @@ h1 {
 h2 {
     font-size: 1rem;
     text-transform: uppercase;
-    color: green;
-    border-bottom: 1px solid #ccc;
-    border-image: linear-gradient(90deg, transparent, #ccc, transparent) 1;
+    color: $main-color1;
+    border-bottom: 1px solid $gray1;
+    border-image: $hline;
     padding: 1rem;
 }
 
 h3 {
     font-size: 1rem;
     font-weight: bold;
-    color: #333;
-    letter-spacing: 0.05rem;
+    color: $gray4;
+    letter-spacing: 0.03rem;
+    padding: 0.2rem 0.5rem;
 }
 
 h4 {
-    color: #AAA;
+    color: $gray2;
     font-size: 0.8rem;
     font-weight: bold;
     letter-spacing: 0.05rem;
+    padding: 0 0.5rem;
 
 }
 
 p {
     line-height: 1.4rem;
     font-size: 0.9rem;
-    color: #333;
-    padding: 1rem;
+    color: $gray4;
+    padding: 0.5rem;
 }
 
 
 
 .main-container {
     background-color: white;
-    border: 1px solid #333;
+    border: 1px solid $gray4;
     text-align: center;
     border-radius: 5px;
     width: 400px;
@@ -110,7 +117,7 @@ p {
 }
 
 .main-container:first-of-type {
-    box-shadow: -10px -10px 0px hsla(34, 100, 50, 0.4);
+    box-shadow: -10px -10px 0px $box-shadow-color;
 }
 
 #background {
@@ -149,7 +156,7 @@ p {
     height: 8rem;
     border-radius: 4rem;
     border: 3px solid white;
-    box-shadow: -10px 10px 2px hsla(34, 100, 50, 0.3);
+    box-shadow: -10px 10px 2px $box-shadow-color;
     position: relative;
     top: 9.5rem;
     z-index: 1;
@@ -157,7 +164,7 @@ p {
 
 #name {
     font-size: 1.7rem;
-    color: #333;
+    color: $gray4;
     margin-top: 4rem;
 }
 
@@ -165,11 +172,11 @@ p {
     margin-top: 1rem;
     font-weight: bold;
     font-size: 0.9rem;
-    color: orangered;
+    color: $main-color1;
 }
 
 .social-media {
-    color: #333;
+    color: $gray4;
     width: 10rem;
     display: flex;
     justify-content: space-evenly;
@@ -183,27 +190,27 @@ p {
     button {
         font-family: Poppins 400, sans-serif;
         font-weight: bold;
-        color: #666;
+        color: $gray3;
         width: 50%;
         height: 2.5rem;
         text-transform: uppercase;
         font-size: 0.8rem;
         border: none;
-        border-top: 1px solid #CCC;
+        border-top: 1px solid $gray1;
         background-color: inherit;
         letter-spacing: 0.05rem;
-        border-image: linear-gradient(120deg, #CCC , transparent) 1;
+        border-image: linear-gradient(120deg, $gray1 , transparent) 1;
     }
     button:first-of-type {
-        border-right: 1px solid #CCC;
-        border-image: linear-gradient(-60deg, #ccc , transparent) 1;
+        border-right: 1px solid $gray1;
+        border-image: linear-gradient(-60deg, $gray1 , transparent) 1;
     }
 }
 
 .circle {
     width: 2rem;
     height: 2rem;
-    background-image: linear-gradient(60deg, hsla(34, 100, 50, 0.5), transparent);
+    background-image: linear-gradient(60deg, $circle-color, transparent);
     border-radius: 50%;
 }
 
@@ -218,8 +225,8 @@ p {
     grid-column: 1/3;
     text-align: left;
     padding: 1.3rem 1rem;
-    border-bottom: 1px solid #ccc;
-    border-image: linear-gradient(90deg, transparent, #CCC, transparent) 1;
+    border-bottom: 1px solid $gray1;
+    border-image: $hline;
     font-size: 1.2rem;
     font-weight: 600;
     display: flex;
@@ -227,14 +234,14 @@ p {
     align-items: center;
 
     p::first-letter {
-        color: orangered;
+        color: $main-color1;
     }
 }
 
 .element2 {
     padding: 0.5rem;
-    border-right: 1px solid #ccc;
-    border-image: linear-gradient(#CCC, transparent) 1;
+    border-right: 1px solid $gray1;
+    border-image: $vline;
 }
 
 .element3 {
