--- a/src/containers/Works/Work/WorkPiece.module.scss
+++ b/src/containers/Works/Work/WorkPiece.module.scss
@@ -1,11 +1,14 @@
+@import "../../../variables";
+
 .workPiece {
     border-bottom: 1px solid #ccc;
-    border-image: linear-gradient(90deg, transparent, #ccc, transparent) 1;
+    border-image: $hline;
     margin-bottom: 1rem;
     text-align: center;
 
     img {
         max-width: 10rem;
+        box-shadow: 3px 3px 5px $gray4;
     }
 
     h3 {
@@ -14,6 +17,7 @@
 
     h4 {
         text-align: center;
+        font-weight: normal;
         text-emphasis: none;
         padding-bottom: 1rem;
     }
