add blog api, blog functionality, and contact page

--- a/src/containers/Blog/Blog.module.scss
+++ b/src/containers/Blog/Blog.module.scss
@@ -20,3 +20,10 @@
     align-items: center;
 
 }
+
+.element2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+}
