--- a/src/containers/Works/Work/WorkPiece.module.scss
+++ b/src/containers/Works/Work/WorkPiece.module.scss
@@ -9,6 +9,12 @@
     img {
         max-width: 10rem;
         box-shadow: 3px 3px 5px $gray4;
+
+        &.svg {
+            width: 1.5rem;
+            border: none;
+            color: red;
+        }
     }
 
     h3 {
