--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,5 @@
+$landscape-width: 800px;
+
 $main-color1: #521571;
 $box-shadow-color: hsla(34, 100, 50, 0.4);
 $circle-color: hsla(280, 69, 26, 0.5);
