--- a/src/App.scss
+++ b/src/App.scss
@@ -127,7 +127,7 @@ p {
     border: 1px solid $gray4;
     text-align: center;
     border-radius: 5px;
-    width: 400px;
+    max-width: 600px;
     margin: 1rem;
 
     @media (min-width: $landscape-width) {
@@ -141,96 +141,11 @@ p {
     
 }
 
-.main-container:first-of-type {
+.container-box-shadow {
     box-shadow: -10px -10px 0px $box-shadow-color;
 }
 
-#background {
-    position: static;
-    width: 100%;
-    height: 15rem;
-    background: url(./assets/backgrounds/background.jpg);
-    background-size: cover;
-}
 
-.bottom-edge {
-    display: flex;
-    flex-direction: row;
-}
-
-#triangle-bottomleft {
-    width: 0;
-    height: 0;
-    border-bottom: 30px solid white;
-    border-right: 200px solid transparent;
-    position: relative;
-    bottom: -5rem;
-  }
-
-#triangle-bottomright {
-    width: 0;
-    height: 0;
-    border-bottom: 30px solid white;
-    border-left: 200px solid transparent;
-    position: relative;
-    bottom: -5rem;
-  }
-
-#profile-photo {
-    width: 8rem;
-    height: 8rem;
-    border-radius: 4rem;
-    border: 3px solid white;
-    box-shadow: -10px 10px 2px $box-shadow-color;
-    position: relative;
-    top: 9.5rem;
-    z-index: 1;
-}
-
-#name {
-    font-size: 1.7rem;
-    color: $gray4;
-    margin-top: 4rem;
-}
-
-#title {
-    margin-top: 1rem;
-    font-weight: bold;
-    font-size: 0.9rem;
-    color: $main-color1;
-}
-
-.social-media {
-    color: $gray4;
-    width: 10rem;
-    display: flex;
-    justify-content: space-evenly;
-    border: none;
-    margin: auto;
-    padding: 1.3rem;
-}
-
-.buttons {
-    margin-bottom: 0.3rem;
-    button {
-        font-family: Poppins 400, sans-serif;
-        font-weight: bold;
-        color: $gray3;
-        width: 50%;
-        height: 2.5rem;
-        text-transform: uppercase;
-        font-size: 0.8rem;
-        border: none;
-        border-top: 1px solid $gray1;
-        background-color: inherit;
-        letter-spacing: 0.05rem;
-        border-image: linear-gradient(120deg, $gray1 , transparent) 1;
-    }
-    button:first-of-type {
-        border-right: 1px solid $gray1;
-        border-image: linear-gradient(-60deg, $gray1 , transparent) 1;
-    }
-}
 
 .circle {
     width: 2rem;
